--- a/museum-adaptive/sass/components/_socials.scss
+++ b/museum-adaptive/sass/components/_socials.scss
@@ -55,7 +55,7 @@
         right: 0;
         justify-content: center;
         width: 100%;
-        z-index: 4;
+        z-index: 104;
     }
     @media screen and (max-width: 420px) {
         bottom: 24px;
