--- a/museum-adaptive/sass/layout/_header.scss
+++ b/museum-adaptive/sass/layout/_header.scss
@@ -53,7 +53,7 @@
     position: relative;
     width: 30px;
     height: 31px;
-    z-index: 3;
+    z-index: 1003;
     &::before {
         content: '';
         position: absolute;
@@ -86,6 +86,7 @@
     }
     @media screen and (max-width: 420px) {
         width: 310px;
+        margin-left: 20px;
         justify-content: center;
         padding-bottom: 20px;
         margin-bottom: 24px;
