--- a/museum-adaptive/sass/layout/_navigation.scss
+++ b/museum-adaptive/sass/layout/_navigation.scss
@@ -3,11 +3,12 @@
         position: fixed;
         padding-top: 166px;
         left: 0;
+        top: 0;
         bottom: 0;
         height: 100vh;
         transform: translateX(-100%);
         transition: transform 0.3s;
-        z-index: 2;
+        z-index: 100;
         background: #000000;
         width: 300px;
     }
@@ -36,6 +37,7 @@
     }
     @media screen and (max-width: 420px) {
         width: 310px;
+        margin-left: 20px;
     }
 }
 .header-nav-list__item {
